chore: update project related
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -16,8 +16,7 @@
         class="gf-form-input width-12"
         ng-model="ctrl.annotation.kind"
         ng-options="f.value as f.label for f in ctrl.kindOptions"
-      >
-      </select>
+      ></select>
     </div>
   </div>
 </div>
